--- a/NotesNG/src/app/components/about/about.component.html
+++ b/NotesNG/src/app/components/about/about.component.html
@@ -1,3 +1,47 @@
-<p>
-  about works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-2"></div>
+
+  <div class="col-sm-8 aboutSection">
+  <div class="row">
+      <div class="col-sm-2">
+      </div>
+      <div class="col-sm-8">
+        <h3>About</h3>
+        <br>
+        <p>Welcome to Note App! Remember things!</p>
+        <br>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-2">
+      </div>
+      <div class="col-sm-8">
+        <p>Web-app designed to use a MySQL database with Java logic and viewed from Angular. See more details at GitHub: <a href="https://github.com/braidenm/Notes" ><strong>Repository</strong></a></p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-2"></div>
+      <div class="col-sm-8">
+        <br>
+        <h3>Created By:</h3>
+        <br>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-2"></div>
+      <div class="col-sm-8">
+        <img src="https://media.licdn.com/dms/image/C5603AQGz_fXk4f6g-w/profile-displayphoto-shrink_200_200/0?e=1557360000&v=beta&t=z8ruyKEVqUY0hWLnL6aQJmunOk-_DYx8MChNLkA1Wh4">
+        <br>
+        <strong>Braiden Miller</strong>
+        <br>
+      </div>
+
+    </div>
+    <br>
+    <br>
+    <br>
+  </div>
+  </div>
+</div>
