--- a/NotesNG/src/app/components/notes/notes.component.html
+++ b/NotesNG/src/app/components/notes/notes.component.html
@@ -1,3 +1,78 @@
-<p>
-  notes works!
-</p>
+<br>
+<br>
+<br>
+<div class="row">
+<div class="col-sm-3"></div>
+  <div class="col-sm-6 notes">
+    <br>
+    <div *ngIf="!selected">
+      <div class="row">
+        <div class="col-sm-6">
+          <h1>{{title}} <span class="count" [ngClass]="dangerLevel()">{{count()}}</span> </h1>
+        </div>
+        <div class="col-sm-3 search">
+          <form>
+            <input placeholder="Search" type="text" name="search" [(ngModel)]="search" (keyup)="searchNotes(search)">
+          </form>
+        </div>
+      </div>
+
+      <br>
+      Show Marked
+      <input type="checkbox" [(ngModel)]="showComplete">
+      <br>
+      <br>
+      <div class="notesBody">
+          <table class="table table-striped"  style="border: solid">
+
+              <thead class="thead-dark">
+                <th>Title</th>
+                <th>Mark</th>
+                <!-- <th>Completed</th> -->
+                <th class="right">Delete</th>
+              </thead>
+                <tbody>
+                  <tr *ngFor='let note of notes | incomplete: showComplete'>
+                    <td class="title" [ngClass]="strikeout(note)" (click)="displayNote(note)" >{{note.title}}</td>
+                    <td><input type="checkbox" [(ngModel)]="note.completed" (click)='updateBoxNote(note)'></td>
+                    <!-- <td [ngClass]="strikeout(note)">{{note.completed}}</td> -->
+                    <td class="right"> <button class="btn btn-danger" (click)='deleteNote(note.id)'>X</button></td>
+                  </tr>
+
+                </tbody>
+          </table>
+      </div>
+
+        <form #newTitle= "ngForm" *ngIf="selected == null">
+
+          <input class="form-control" id="addTitle" type="text" name="title" placeholder="title" ngModel>
+          <button type="submit" class="btn btn-outline-primary" (click)="addNote(newTitle)">Add</button>
+        </form>
+      </div>
+
+
+      <div *ngIf="selected && !editNote">
+        <!-- <p>{{selected.id}}</p> -->
+        <h3>{{selected.title}}</h3>
+        <hr>
+        <p>{{selected.details}}</p>
+        <!-- <p>{{selected.completed}}</p> -->
+        <hr>
+        <button class="btn btn-outline-primary" (click)="setEditNote()">Edit</button>
+        <button class="btn btn-outline-success" (click)="displayTable()">Show Table</button>
+        <br>
+      </div>
+
+      <form *ngIf="editNote">
+
+        Title: <input class="form-control" type="text" name="title" [(ngModel)]="editNote.title" >
+        Details: <textarea class="form-control" name="details" [(ngModel)]="editNote.details"></textarea>
+        <!-- Marked: <input class="form-control" type="text" name="completed" [(ngModel)]="editNote.completed" > -->
+        <input class="btn btn-outline-secondary" type="button" name="cancel" value="Cancel" (click)="cancelNote()">
+        <input type="button" class="btn btn-outline-primary" name="updateNote" value="Save" (click)="updateNote()">
+
+      </form>
+      <br>
+    </div>
+
+  </div>
