--- a/NotesNG/src/app/components/login/login.component.html
+++ b/NotesNG/src/app/components/login/login.component.html
@@ -1,3 +1,8 @@
-<p>
-  login works!
-</p>
+<form >
+    <input type="text" placeholder="Username" name="username" [(ngModel)]="user.username">
+    <input type="text" placeholder="Password" name="password" [(ngModel)]="user.password">
+    <input type="submit" value="Login" class="btn btn-outline-primary" (click)="login()">
+  </form>
+  <div *ngIf="invalid">
+    <p>{{invalid}}</p>
+  </div>
