profile page up and some bug fixes

--- a/NotesNG/src/app/components/home/home.component.html
+++ b/NotesNG/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="col-sm-3"></div>
   <div class="col-sm-6 welcome">
     <div *ngIf="!isLoggedIn()">
-      <h1>Welcome to The Note App</h1>
+      <h1>The Note App</h1>
       <h3>Remember things by writing them down</h3>
       <h2>Sign up Today!</h2>
       <hr>
