--- a/NotesNG/src/app/components/not-found/not-found.component.html
+++ b/NotesNG/src/app/components/not-found/not-found.component.html
@@ -1,3 +1,8 @@
-<p>
-  not-found works!
-</p>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<h1 class="errorMess">The Page You Are Looking For Is Not HERE</h1>
