--- a/NotesNG/src/app/components/about/about.component.html
+++ b/NotesNG/src/app/components/about/about.component.html
@@ -1,4 +1,6 @@
 <div class="container">
+  <br>
+  <br>
   <div class="row">
     <div class="col-sm-2"></div>
 
@@ -9,7 +11,7 @@
       <div class="col-sm-8">
         <h3>About</h3>
         <br>
-        <p>Welcome to Note App! Remember things!</p>
+        <p>Welcome to Note App! Where you can remember things!</p>
         <br>
       </div>
     </div>
