--- a/NotesNG/src/app/components/navigation/navigation.component.html
+++ b/NotesNG/src/app/components/navigation/navigation.component.html
@@ -13,6 +13,9 @@
           <a class="nav-link" [routerLink]="['/notes']">Notes</a>
         </li> -->
         <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/profile']">Profile</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" [routerLink]="['/about']">About</a>
         </li>
       </ul>
