--- a/NotesNG/src/app/components/notes/notes.component.html
+++ b/NotesNG/src/app/components/notes/notes.component.html
@@ -23,7 +23,7 @@
       <br>
       <br>
       <div class="notesBody">
-          <table class="table table-striped"  style="border: solid">
+          <table class="table table-striped table-hover"  style="border: solid">
 
               <thead class="thead-dark">
                 <th>Title</th>
