getting project running again and updates to saving password

--- a/NotesNG/src/app/components/about/about.component.html
+++ b/NotesNG/src/app/components/about/about.component.html
@@ -34,7 +34,7 @@
     <div class="row">
       <div class="col-sm-2"></div>
       <div class="col-sm-8">
-        <img src="https://media.licdn.com/dms/image/C5603AQGz_fXk4f6g-w/profile-displayphoto-shrink_200_200/0?e=1557360000&v=beta&t=z8ruyKEVqUY0hWLnL6aQJmunOk-_DYx8MChNLkA1Wh4">
+        <img [src]="me.pic" style="width:50%;height:75%;">
         <br>
         <strong>Braiden Miller</strong>
         <br>
