--- a/NotesNG/src/app/components/profile/profile.component.css
+++ b/NotesNG/src/app/components/profile/profile.component.css
@@ -4,3 +4,17 @@
   border-radius: 10px;
   padding: 2%;
 }
+.passwordBox {
+  border: silver;
+  border-style: solid;
+  border-width: thin;
+  border-radius: 4px;
+  width: 100%;
+  height: 35px;
+
+}
+
+.passwordIcon {
+  border: none;
+  margin-left: -10%;
+}
